--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,4 +56,16 @@
         android:textColor="@android:color/white"
         android:textSize="18sp" />
 
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/login_button"
+        android:layout_width="241dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/main_join_now_btn"
+        android:layout_below="@+id/login_btn"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="88dp"
+        android:layout_marginTop="59dp"
+        android:layout_marginEnd="80dp"
+        android:layout_marginBottom="52dp" />
 </RelativeLayout>
