--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -66,6 +66,22 @@
         android:text="Send OTP"
         android:textColor="@android:color/white" />
 
+    <Button
+        android:id="@+id/verify_otp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/linear_layout_1"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="298dp"
+        android:layout_marginTop="11dp"
+        android:layout_marginEnd="25dp"
+        android:background="@drawable/button"
+        android:text="Verify OTP"
+        android:textColor="@android:color/white"
+        android:visibility="invisible"/>
+
     <LinearLayout
         android:id="@+id/linear_layout_1"
         android:layout_width="match_parent"
@@ -126,39 +142,56 @@
         android:layout_marginRight="15dp"
         android:background="@drawable/button"
         android:padding="17dp"
-        android:text="Login"
+        android:text="Login as Customer"
         android:textAllCaps="false"
         android:textColor="@android:color/white"
         android:textSize="18sp" />
 
     <TextView
-        android:id="@+id/admin_panel_link"
+        android:id="@+id/Retailer"
         android:layout_width="95dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/login_btn"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="80dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="53dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="29dp"
         android:text="Retailer?"
         android:textColor="@color/black"
         android:textSize="20dp"
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/not_admin_panel_link"
+        android:id="@+id/Wholesaler"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/login_btn"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="46dp"
+        android:layout_marginStart="32dp"
         android:layout_marginLeft="80dp"
-        android:layout_marginTop="6dp"
+        android:layout_marginTop="8dp"
         android:text="Wholesaler?"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
         android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/Customer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/login_btn"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="160dp"
+        android:layout_marginLeft="80dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginEnd="139dp"
+        android:text="Customer?"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:visibility="invisible" />
 
     <com.facebook.login.widget.LoginButton
         android:id="@+id/login_button"
