--- a/app/src/main/res/drawable/join_now.xml
+++ b/app/src/main/res/drawable/join_now.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <stroke
-        android:color="@color/white"
+        android:color="@color/design_default_color_error"
         android:width="3dp"
         ></stroke>
     <corners
