--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -212,4 +212,14 @@
         android:text="OR"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="110dp"
+        android:layout_height="52dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="214dp"
+        android:layout_marginBottom="640dp"
+        android:text="TextView" />
+
 </RelativeLayout>
