--- a/app/src/main/res/layout/activity_retailer_add_new.xml
+++ b/app/src/main/res/layout/activity_retailer_add_new.xml
@@ -58,7 +58,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/product_description"
-        android:inputType="textMultiLine"
+        android:inputType="numberDecimal"
         android:layout_marginTop="6dp"
         android:padding="15dp"
         android:hint="Product Price"
@@ -73,7 +73,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/product_price"
-        android:inputType="textMultiLine"
+        android:inputType="numberDecimal"
         android:layout_marginTop="6dp"
         android:padding="15dp"
         android:hint="Product Quantity"
