--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,52 +5,71 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/back"
     tools:context=".MainActivity">
+
+    <ImageView
+        android:id="@+id/app_logo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="155dp"
+        android:layout_marginTop="279dp"
+        android:layout_marginEnd="156dp"
+        android:background="@drawable/applogo" />
 
     <TextView
         android:id="@+id/app_slogan"
-        android:layout_width="248dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_alignTop="@+id/app_logo"
+        android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="142dp"
-        android:layout_marginEnd="80dp"
-        android:text="Find, Discover, Choose and Buy anything online."
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="104dp"
+        android:layout_marginEnd="52dp"
+        android:shadowColor="#121111"
+        android:text="Groceries at your door step"
         android:textAlignment="center"
-        android:textColor="@color/white"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="25sp"
-        android:textStyle="italic"
+        android:textStyle="bold"
         android:visibility="visible" />
+
     <Button
         android:id="@+id/main_login_btn"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/main_join_now_btn"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="10dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="68dp"
         android:layout_marginLeft="15dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="66dp"
         android:layout_marginRight="15dp"
+        android:layout_marginBottom="124dp"
         android:background="@drawable/button"
-        android:padding="20dp"
-        android:textAllCaps="false"
-        android:textSize="18sp"
+        android:padding="10dp"
         android:text="Already have an Account? Login"
+        android:textAllCaps="false"
         android:textColor="@android:color/white"
-        />
+        android:textSize="18dp" />
 
     <Button
         android:id="@+id/main_join_now_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/main_login_btn"
+        android:layout_below="@+id/app_logo"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="15dp"
+        android:layout_marginTop="120dp"
         android:layout_marginRight="15dp"
-        android:layout_marginBottom="6dp"
         android:background="@drawable/join_now"
-        android:backgroundTint="@color/design_default_color_error"
-        android:padding="20dp"
+        android:backgroundTint="@color/orange"
+        android:padding="10dp"
         android:text="Register Now"
         android:textAllCaps="false"
         android:textColor="@android:color/white"
@@ -60,12 +79,12 @@
         android:id="@+id/login_button"
         android:layout_width="241dp"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/main_join_now_btn"
         android:layout_below="@+id/login_btn"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="88dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="86dp"
         android:layout_marginTop="59dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginBottom="52dp" />
+        android:layout_marginEnd="82dp"
+        android:layout_marginBottom="60dp" />
 </RelativeLayout>
