--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -59,6 +59,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
+        android:background="@color/orange"
+        app:backGroundColor="@color/orange"
         android:layout_marginStart="163dp"
         android:layout_marginTop="48dp"
         android:layout_marginEnd="158dp"
@@ -72,7 +74,7 @@
         android:id="@+id/pd_add_to_cart_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/design_default_color_primary_dark"
+        android:background="@color/orange"
         android:layout_margin="15dp"
         android:layout_alignParentBottom="true"
         android:text="Add to Cart"
