--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login"
+    android:background="@drawable/back1"
     tools:context=".RegisterActivity">
 
     <ImageView
@@ -25,7 +25,7 @@
         android:background="@drawable/join_now"
         android:hint="Name"
         android:inputType="text"
-        android:padding="20dp"
+        android:padding="15dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         android:textSize="19sp" />
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/register_username_input"
         android:background="@drawable/join_now"
-        android:padding="20dp"
+        android:padding="15dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:hint="Phone Number"
@@ -54,7 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/register_phone_number_input"
         android:background="@drawable/join_now"
-        android:padding="20dp"
+        android:padding="15dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginTop="6dp"
@@ -72,12 +72,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/register_password_input"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="-1dp"
+        android:layout_marginTop="6dp"
         android:layout_marginRight="15dp"
         android:background="@drawable/join_now"
         android:hint="retype Password"
         android:inputType="textPassword"
-        android:padding="20dp"
+        android:padding="15dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         android:textSize="19sp" />
@@ -153,6 +153,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Customer"
+            android:textStyle="bold"
             android:layout_marginRight="10dp"
             android:textColor="@color/black"
 
@@ -165,6 +166,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:text="Retailer"
+            android:textStyle="bold"
             android:textColor="@color/black" />
 
         <RadioButton
@@ -172,6 +174,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Wholesaler"
+            android:textStyle="bold"
             android:textColor="@color/black" />
     </RadioGroup>
 
