--- a/app/src/main/res/layout/activity_update_items.xml
+++ b/app/src/main/res/layout/activity_update_items.xml
@@ -11,7 +11,7 @@
         android:id="@+id/r112"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/design_default_color_primary_dark"
+        android:background="@color/orange"
         android:layout_alignParentTop="true">
 
         <TextView
@@ -44,7 +44,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/design_default_color_primary_dark"
+        android:background="@color/orange"
         android:text="Add Item"
         android:textColor="@color/white"
         android:textSize="20dp"
