--- a/app/src/main/res/layout/orders_layout.xml
+++ b/app/src/main/res/layout/orders_layout.xml
@@ -7,7 +7,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/orange"
         android:padding="10dp"
         android:layout_margin="10dp">
 
