--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,7 +53,7 @@
 
     <Button
         android:id="@+id/send_otp"
-        android:layout_width="wrap_content"
+        android:layout_width="74dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/linear_layout_1"
         android:layout_alignParentStart="true"
@@ -61,10 +61,11 @@
         android:layout_centerHorizontal="true"
         android:layout_marginStart="298dp"
         android:layout_marginTop="11dp"
-        android:layout_marginEnd="25dp"
+        android:layout_marginEnd="39dp"
         android:background="@drawable/button"
         android:text="Send OTP"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/white"
+        android:visibility="visible" />
 
     <Button
         android:id="@+id/verify_otp"
@@ -130,6 +131,21 @@
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         android:textSize="19sp" />
+
+
+    <ImageView
+        android:id="@+id/tick"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/linear_layout_1"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="298dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="25dp"
+        android:src="@drawable/tick"
+        android:visibility="invisible" />
 
     <Button
         android:id="@+id/login_btn"
