--- a/app/src/main/res/layout/activity_new_orders.xml
+++ b/app/src/main/res/layout/activity_new_orders.xml
@@ -27,7 +27,7 @@
     </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/cart_list"
+        android:id="@+id/orders_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/r2"
