--- a/app/src/main/res/layout/orders_layout.xml
+++ b/app/src/main/res/layout/orders_layout.xml
@@ -12,7 +12,7 @@
         android:layout_margin="10dp">
 
         <TextView
-            android:id="@+id/user_name"
+            android:id="@+id/order_user_name"
             android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:text="User Name"
@@ -22,7 +22,7 @@
             android:textStyle="bold"/>
 
         <TextView
-            android:id="@+id/phone_number"
+            android:id="@+id/order_phone_number"
             android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:text="Phone Number"
@@ -77,6 +77,7 @@
             android:layout_marginTop="10dp"/>
 
         <Button
+            android:id="@+id/show_all_products_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
