--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,15 +8,16 @@
     android:background="@drawable/back1"
     tools:context=".LoginActivity">
 
+
     <ImageView
         android:id="@+id/login_applogo"
-        android:layout_width="300dp"
-        android:layout_height="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="119dp"
-        android:layout_marginEnd="52dp" />
-
+        android:layout_marginTop="75dp"
+        android:layout_marginEnd="153dp"
+        android:src="@drawable/applogo" />
 
     <EditText
         android:id="@+id/login_phone_number_input"
@@ -25,6 +26,7 @@
         android:layout_below="@+id/login_applogo"
         android:background="@drawable/join_now"
         android:padding="20dp"
+        android:layout_marginTop="25dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:hint="Phone Number"
