--- a/app/src/main/res/layout/activity_user_products.xml
+++ b/app/src/main/res/layout/activity_user_products.xml
@@ -11,7 +11,7 @@
         android:id="@+id/r3"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/design_default_color_primary_dark"
+        android:background="@color/orange"
         android:layout_alignParentTop="true">
 
         <TextView
