--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -10,6 +10,11 @@
             android:title="Categories"
             android:iconTint="@color/white"/>
         <item
+            android:id="@+id/nav_search"
+            android:icon="@drawable/search"
+            android:title="Search"
+            android:iconTint="@color/white"/>
+        <item
             android:id="@+id/nav_orders"
             android:icon="@drawable/orders"
             android:title="Orders"
