--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -23,7 +23,7 @@
         android:gravity="center"
         android:text="Product Name"
         android:textColor="@color/black"
-        android:textSize="15sp"
+        android:textSize="25sp"
         android:textStyle="bold" />
 
     <TextView
@@ -34,7 +34,7 @@
         android:text="Product Description"
         android:textColor="@color/black"
         android:textStyle="bold"
-        android:textSize="15sp"
+        android:textSize="20sp"
         android:gravity="center"
         android:layout_marginTop="10dp"
         />
@@ -46,25 +46,26 @@
         android:text="Product Price"
         android:textColor="@color/black"
         android:textStyle="bold"
-        android:textSize="15sp"
+        android:textSize="25sp"
         android:gravity="center"
         android:layout_marginTop="10dp"
         />
 
     <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
         android:id="@+id/number_btn"
-        android:layout_width="90dp"
-        android:layout_height="26dp"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
         android:layout_below="@+id/product_price_details"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
-        android:background="@color/orange"
-        app:backGroundColor="@color/orange"
-        android:layout_marginStart="163dp"
+        android:layout_marginStart="130dp"
         android:layout_marginTop="48dp"
-        android:layout_marginEnd="158dp"
+        android:layout_marginEnd="134dp"
+        android:background="@color/orange"
         android:elevation="6dp"
+        app:textSize="8dp"
+        app:backGroundColor="@color/orange"
         app:finalNumber="10"
         app:initialNumber="1">
 
@@ -78,6 +79,7 @@
         android:layout_margin="15dp"
         android:layout_alignParentBottom="true"
         android:text="Add to Cart"
+
         android:textColor="@color/white"
         android:textSize="18dp"
         />
