--- a/app/src/main/res/layout/activity_user_products.xml
+++ b/app/src/main/res/layout/activity_user_products.xml
@@ -37,4 +37,15 @@
 
     </androidx.recyclerview.widget.RecyclerView>
 
+    <Button
+        android:id="@+id/confirm_process_btn1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/orange"
+        android:text="Confirm"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        />
+
 </RelativeLayout>
