--- a/app/src/main/res/layout/activity_retailer_add_new.xml
+++ b/app/src/main/res/layout/activity_retailer_add_new.xml
@@ -98,6 +98,20 @@
         android:textColor="@android:color/white"
         android:background="@drawable/button"
         />
+    <Button
+        android:id="@+id/update_product"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/product_quantity"
+        android:text="Update Product"
+        android:layout_marginLeft="45dp"
+        android:layout_marginRight="45dp"
+        android:layout_marginTop="20dp"
+        android:textSize="18sp"
+        android:textAllCaps="false"
+        android:textColor="@android:color/white"
+        android:background="@drawable/button"
+        />
 
 
 </RelativeLayout>
